# fancymount

./: CHOICES.md  Cargo.toml  README.md
scripts/: install.sh  release.sh
src/: app.rs  clipboard.rs  main.rs  mount_info.rs  mount_ops.rs
